...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/hint_photo_name"
                android:imeOptions="flagNoFullscreen"
                android:text="@={takePhotoViewModel.photoName}"
                android:id="@+id/txt_save_photo_name"
                app:layout_constraintBaseline_toBaselineOf="@+id/lbl_save_photo_name"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lbl_save_photo_name"
                android:layout_marginStart="8dp"/>

...
                app:layout_constraintTop_toBottomOf="@+id/txt_save_photo_name"/>

        <Button
                android:text="@string/lbl_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_photo_save"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> takePhotoViewModel.onSaveButtonClicked()}"
                app:layout_constraintTop_toBottomOf="@+id/txt_save_photo_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
...
