<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventViewModel"
            type="be.hogent.faith.faith.emotionCapture.enterEventDetails.EventViewModel" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <!--ACHTERGROND-->
        <ImageView
            android:id="@+id/background_event_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/park_gras"
            android:contentDescription="@string/descr_city_park"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/park_achtergrond"
            tools:srcCompat="@drawable/park_achtergrond" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/screen_new_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageButton
                android:id="@+id/btn_draw_cancel"
                android:layout_width="@dimen/material_icon_width"
                android:layout_height="@dimen/material_icon_height"
                android:layout_marginTop="@dimen/margin_corner_button"
                android:layout_marginStart="@dimen/margin_corner_button"
                android:background="@drawable/ic_return"
                android:contentDescription="@string/cancel"
                android:onClick="@{() -> eventViewModel.onBackButtonClicked()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageButton
                android:id="@+id/btn_event_delete"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:layout_margin="16dp"
                android:background="@drawable/ic_trashcan"
                android:contentDescription="@string/cancel"
                android:onClick="@{() -> eventViewModel.onTrashcanClicked()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/img_wegwijzerpaal"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guide_recyclerview_top"
                app:layout_constraintEnd_toStartOf="@+id/guide_center_pole"
                app:layout_constraintStart_toStartOf="@+id/guide_center_pole"
                app:layout_constraintTop_toBottomOf="@+id/guide_top_pole"
                app:srcCompat="@drawable/wegwijzerpaal"
                android:contentDescription="@string/wegwijzerpaal"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_center_pole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_top_pole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.28" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_audio"
                style="@style/arrow_style"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/description_addAudio"
                android:onClick="@{() -> eventViewModel.onAudioButtonClicked()}"
                android:text="@string/description_addAudio"
                app:icon="@drawable/ic_micro"
                app:layout_constraintEnd_toStartOf="@+id/guide_center_pole"
                app:layout_constraintTop_toBottomOf="@+id/guide_top_pole" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_camera"
                style="@style/arrow_style"
                android:contentDescription="@string/description_addPhoto"
                android:onClick="@{() -> eventViewModel.onCameraButtonClicked()}"
                android:text="@string/description_addPhoto"
                app:icon="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="@+id/btn_event_details_audio"
                app:layout_constraintStart_toStartOf="@+id/btn_event_details_audio"
                app:layout_constraintTop_toBottomOf="@+id/btn_event_details_audio" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_drawing"
                style="@style/arrow_style"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/description_addDrawing"
                android:onClick="@{() -> eventViewModel.onDrawingButtonClicked()}"
                android:text="@string/description_addDrawing"
                app:icon="@drawable/ic_tekenen"
                app:layout_constraintStart_toEndOf="@+id/guide_center_pole"
                app:layout_constraintTop_toTopOf="@+id/btn_event_details_audio" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_event_details_text"
                style="@style/arrow_style"
                android:contentDescription="@string/description_addText"
                android:onClick="@{() -> eventViewModel.onTextButtonClicked()}"
                android:text="@string/description_addText"
                app:icon="@drawable/ic_schrijven"
                app:layout_constraintEnd_toEndOf="@+id/btn_event_details_drawing"
                app:layout_constraintStart_toStartOf="@+id/btn_event_details_drawing"
                app:layout_constraintTop_toTopOf="@+id/btn_event_details_camera" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_recyclerview_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_recyclerview_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_recyclerview_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.83" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_event_details_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rv_background"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/guide_recyclerview_end"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guide_recyclerview_start"
                app:layout_constraintTop_toBottomOf="@+id/guide_recyclerview_top"
                app:layout_constraintVertical_bias="1.0"
                tools:listitem="@layout/item_event_detail_thumbnail" />

            <ImageButton
                android:id="@+id/btn_event_send"
                android:layout_width="@dimen/material_icon_width"
                android:layout_height="@dimen/material_icon_height"
                android:layout_marginTop="@dimen/margin_corner_button"
                android:layout_marginEnd="@dimen/margin_corner_button"
                android:background="@drawable/save_btn"
                android:visibility="@{eventViewModel.eventDetails.size() > 0 ? View.VISIBLE : View.GONE}"
                android:minWidth="24dp"
                android:onClick="@{() -> eventViewModel.onSendButtonClicked()}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/save"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_avatar_titel_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.38" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_avatar_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.43" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_avatar_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.38" />


            <ImageView
                android:id="@+id/img_event_details_avatar_zittend"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="32dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/avatar_zittend"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/guide_recyclerview_top"
                app:layout_constraintEnd_toStartOf="@+id/guide_avatar_right"
                app:layout_constraintStart_toStartOf="@+id/guide_recyclerview_start"
                app:layout_constraintTop_toTopOf="@+id/guide_avatar_top"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/jongen_alternatief_lb_bank" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_avatar_inkleuren_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8375" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_avatar_inkleuren_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.962" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_avatar_inkleuren_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.71" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_avatar_inkleuren_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.933" />

            <include
                tools:eventViewModel="@{eventViewModel}"
                layout="@layout/view_button_color_avatar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/guide_avatar_inkleuren_bottom"
                app:layout_constraintEnd_toEndOf="@+id/guide_avatar_inkleuren_right"
                app:layout_constraintStart_toStartOf="@+id/guide_avatar_inkleuren_left"
                app:layout_constraintTop_toTopOf="@+id/guide_avatar_inkleuren_top">
            </include>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
