...
            android:contentDescription="@string/cancel"
            android:onClick="@{() -> photoViewModel.onCancelClicked()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_takePhoto_takePhoto"
            android:layout_width="@dimen/material_icon_width"
            android:layout_height="@dimen/material_icon_height"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_take_picture"
            android:contentDescription="@string/take_photo_neem_foto"
            android:onClick="@{() -> photoViewModel.onTakePhotoButtonClicked()}"
...
