...

        <import type="android.graphics.Color" />

    </data>

    <FrameLayout
        android:id="@+id/screen_draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--ACHTERGROND-->
        <ImageView
            android:layout_width="match_parent"
...
